src/golden/functions/typeerrors/test.golden/caseerrors.fl
	stringNumber
		| True = "hello"
		| False = 42
